первая страница сайта

--- a/index.html
+++ b/index.html
@@ -5,8 +5,105 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav>
+        <a>
+          <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс">
+        </a>
+      <ul>
+        <li><a href="#nowhere">Студия</a></li>
+        <li><a href="#nowhere">Клиенты</a></li>
+        <li><a href="#nowhere">Магазин</a></li>
+        <li><a href="#nowhere">Контакты</a></li>
+      </ul>
+      <ul>
+        <li><a href="#nowhere">Корзина</a></li>
+      </ul>
+      </nav>
+<section>
+      <p><strong>Долго, дорого,<br> скрупулезно.</strong><p>
+        <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+          <a href="#nowhere">Узнать больше</a>
+          <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="первый слайд">
+          <p><strong>Любим математику<br>  как никто другой</strong><p>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+              <a href="#nowhere">Узнать больше</a>
+              <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="второй слайд">
+              <p><strong>Только ночь, только хардкор</strong><p>
+                <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+                  <a href="#nowhere">Узнать больше</a>
+                  <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="третий слайд">
+                  
+        </section>  
+    </header>
+    <main>
+      <h1>Интернет магазин «Nerds»</h1>
+  <section class="services">
+    <h2>Услуги</h2>
+  </section>
+  <section class="about">
+    <h2>О нас</h2>
+    <p><strong>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</strong></p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p>Выполняем заказы на разработку:</p>
+        <ul>
+        <li>Веб-сайтов любой сложности</li>	
+        <li>Мобильных приложений для iOS и Android</li>	
+        <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+          <figure>
+            <img src="https://via.placeholder.com/360x208" width="360" height="208" alt="иллюстрация логотип">
+          </figure>
+          <table>
+          <caption>с 2004 года Любим точность во всем:</caption>
+          <tr>
+            <td>146<sup>%</sup></td>
+            <td>100<sup>%</sup></td>
+            <td>50<sup>%</sup></td>
+          </tr>
+          <tr>
+            <td>Уровень<br> самоотдачи</td>
+            <td>Соблюдение<br>  сроков</td>
+            <td>Минимальная<br> предоплата</td>
+          </tr>
+          </table>
+  </section>
+  <section class="companies">
+    <h2>Производители</h2>
+    <a href="#nowhere"><img src="https://via.placeholder.com/199x68" width="199" height="68"
+       alt="htmlacademy"></a>
+      <a href="#nowhere"><img src="https://via.placeholder.com/209x90" width="209" height="90"
+         alt="borodinski"></a>
+        <a href="#nowhere"><img src="https://via.placeholder.com/185x52" width="185" height="52"
+           alt="pink"></a>
+          <a href="#nowhere"><img src="https://via.placeholder.com/173x84" width="173" height="84"
+             alt="MISHKA"></a>
+    </section>
+</main>
+    <footer class="main-footer">
+      <figure>
+        <img src="https://via.placeholder.com/1440x416" width="1440" height="416" alt="карта">
+      </figure>
+      <figure>
+        <img src="https://via.placeholder.com/231x190" width="231" height="190" alt="метка на карте">
+      </figure>
+      <p>NЁRDS DESIGN STUDIO</p>
+      <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8<br>  тел. +7 (812) 275-75-75</p>
+        <a href="nowhere">Напишите нам</a>
+        <div>
+        <a href="#nowhere"><img src="https://via.placeholder.com/81x81" width="81" height="81"
+          alt="ссылка на вк"></a>
+              <a href="#nowhere"><img src="https://via.placeholder.com/81x81" width="81" height="81"
+            alt="ссылка на фейсбук"></a>
+            <a href="#nowhere"><img src="https://via.placeholder.com/81x81" width="81" height="81"
+              alt="ссылка на инстаграмм"></a>
+            </div>
+            <p><strong>Давайте дружить, это выгодно!</strong></p>
+            <p>Скидка 10% для друзей из социальных сетей.</p>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    </footer>
+
+  <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
 
   </body>
 </html>
