--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
       <h1>Интернет магазин «Nerds»</h1>
   <section class="services">
     <h2>Услуги</h2>
+    <!--Дописать код по услугам-->
+<div>
+    <figure>
+      <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация монитора">
+    </figure>
+    <h3>Веб-сайты<h3>
+    <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+    <a href="#nowhere">Заказать</a>
+    <figure>
+      <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация смартфона">
+    </figure>
+    <h3>Приложения<h3>
+    <p>Покорите топ-10 приложений <br> в AppStore и Google Play</p>
+    <a href="#nowhere">Заказать</a>
+    <figure>
+      <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация доски">
+    </figure>
+    <h3>Презентации<h3>
+    <p>Вы даже не подозреваете,<br>  насколько вы изумительны!</p>
+    <a href="#nowhere">Заказать</a>
+    </div>
   </section>
   <section class="about">
     <h2>О нас</h2>
