убирает <br>, закрывает првильно h3, добавляет пробелы между тегами

--- a/index.html
+++ b/index.html
@@ -11,30 +11,45 @@
           <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс">
         </a>
       <ul>
-        <li><a href="#nowhere">Студия</a></li>
-        <li><a href="#nowhere">Клиенты</a></li>
-        <li><a href="#nowhere">Магазин</a></li>
-        <li><a href="#nowhere">Контакты</a></li>
+        <li>
+          <a href="#nowhere">Студия</a>
+        </li>
+        <li>
+          <a href="#nowhere">Клиенты</a>
+        </li>
+        <li>
+          <a href="#nowhere">Магазин</a>
+        </li>
+        <li>
+          <a href="#nowhere">Контакты</a>
+        </li>
       </ul>
       <ul>
-        <li><a href="#nowhere">Корзина</a></li>
+        <li>
+          <a href="#nowhere">Корзина</a>
+        </li>
       </ul>
       </nav>
 <section>
-      <p><strong>Долго, дорого,<br> скрупулезно.</strong><p>
-        <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+      <p>
+        <strong>Долго, дорого, скрупулезно.</strong>
+        <p>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
           <a href="#nowhere">Узнать больше</a>
           <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="первый слайд">
-          <p><strong>Любим математику<br>  как никто другой</strong><p>
+          <p>
+            <strong>Любим математику  как никто другой</strong>
+              <p>
             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
               <a href="#nowhere">Узнать больше</a>
               <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="второй слайд">
-              <p><strong>Только ночь, только хардкор</strong><p>
+              <p>
+                <strong>Только ночь, только хардкор</strong>
+                <p>
                 <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
                   <a href="#nowhere">Узнать больше</a>
                   <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="третий слайд">
-                  
-        </section>  
+                  </section>  
     </header>
     <main>
       <h1>Интернет магазин «Nerds»</h1>
@@ -45,27 +60,29 @@
     <figure>
       <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация монитора">
     </figure>
-    <h3>Веб-сайты<h3>
+    <h3>Веб-сайты</h3>
     <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
     <a href="#nowhere">Заказать</a>
     <figure>
       <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация смартфона">
     </figure>
-    <h3>Приложения<h3>
-    <p>Покорите топ-10 приложений <br> в AppStore и Google Play</p>
+    <h3>Приложения</h3>
+    <p>Покорите топ-10 приложений  в AppStore и Google Play</p>
     <a href="#nowhere">Заказать</a>
     <figure>
       <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация доски">
     </figure>
-    <h3>Презентации<h3>
-    <p>Вы даже не подозреваете,<br>  насколько вы изумительны!</p>
+    <h3>Презентации</h3>
+    <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
     <a href="#nowhere">Заказать</a>
     </div>
   </section>
   <section class="about">
     <h2>О нас</h2>
-    <p><strong>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</strong></p>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+    <p>
+      <strong>Мы — маленькая, но гордая дизайн-студия из Краснодара.</strong>
+    </p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
         <p>Выполняем заказы на разработку:</p>
         <ul>
         <li>Веб-сайтов любой сложности</li>	
@@ -83,22 +100,30 @@
             <td>50<sup>%</sup></td>
           </tr>
           <tr>
-            <td>Уровень<br> самоотдачи</td>
-            <td>Соблюдение<br>  сроков</td>
-            <td>Минимальная<br> предоплата</td>
+            <td>Уровень самоотдачи</td>
+            <td>Соблюдение  сроков</td>
+            <td>Минимальная предоплата</td>
           </tr>
           </table>
   </section>
   <section class="companies">
     <h2>Производители</h2>
-    <a href="#nowhere"><img src="https://via.placeholder.com/199x68" width="199" height="68"
-       alt="htmlacademy"></a>
-      <a href="#nowhere"><img src="https://via.placeholder.com/209x90" width="209" height="90"
-         alt="borodinski"></a>
-        <a href="#nowhere"><img src="https://via.placeholder.com/185x52" width="185" height="52"
-           alt="pink"></a>
-          <a href="#nowhere"><img src="https://via.placeholder.com/173x84" width="173" height="84"
-             alt="MISHKA"></a>
+    <a href="#nowhere">
+      <img src="https://via.placeholder.com/199x68" width="199" height="68"
+       alt="htmlacademy">
+      </a>
+      <a href="#nowhere">
+        <img src="https://via.placeholder.com/209x90" width="209" height="90"
+         alt="borodinski">
+        </a>
+        <a href="#nowhere">
+          <img src="https://via.placeholder.com/185x52" width="185" height="52"
+           alt="pink">
+          </a>
+          <a href="#nowhere">
+            <img src="https://via.placeholder.com/173x84" width="173" height="84"
+             alt="MISHKA">
+            </a>
     </section>
 </main>
     <footer class="main-footer">
@@ -109,17 +134,25 @@
         <img src="https://via.placeholder.com/231x190" width="231" height="190" alt="метка на карте">
       </figure>
       <p>NЁRDS DESIGN STUDIO</p>
-      <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8<br>  тел. +7 (812) 275-75-75</p>
+      <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8   тел. +7 (812) 275-75-75</p>
         <a href="nowhere">Напишите нам</a>
         <div>
-        <a href="#nowhere"><img src="https://via.placeholder.com/81x81" width="81" height="81"
-          alt="ссылка на вк"></a>
-              <a href="#nowhere"><img src="https://via.placeholder.com/81x81" width="81" height="81"
-            alt="ссылка на фейсбук"></a>
-            <a href="#nowhere"><img src="https://via.placeholder.com/81x81" width="81" height="81"
-              alt="ссылка на инстаграмм"></a>
+        <a href="#nowhere">
+          <img src="https://via.placeholder.com/81x81" width="81" height="81"
+          alt="ссылка на вк">
+        </a>
+              <a href="#nowhere">
+                <img src="https://via.placeholder.com/81x81" width="81" height="81"
+            alt="ссылка на фейсбук">
+          </a>
+            <a href="#nowhere">
+              <img src="https://via.placeholder.com/81x81" width="81" height="81"
+              alt="ссылка на инстаграмм">
+            </a>
             </div>
-            <p><strong>Давайте дружить, это выгодно!</strong></p>
+            <p>
+              <strong>Давайте дружить, это выгодно!</strong>
+            </p>
             <p>Скидка 10% для друзей из социальных сетей.</p>
 
     </footer>
