--- a/index.html
+++ b/index.html
@@ -30,53 +30,83 @@
         </li>
       </ul>
       </nav>
+    </header>
+
+    <main>
 <section>
+  <div>
+  <ul>
+    <li>
+      <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="первый слайд">
+    </li>
+    </ul>
+    </div>
+<div>
+  <ul>
+    <li>
+      <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="второй слайд">
+    </li>
+    </ul>
+  </div>
+  <div>
+    <ul>
+    <li>
+      <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="третий слайд">
+    </li>
+    </ul>
+  </div>
       <p>
         <strong>Долго, дорого, скрупулезно.</strong>
-        <p>
+      </p>
         <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
           <a href="#nowhere">Узнать больше</a>
-          <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="первый слайд">
           <p>
             <strong>Любим математику  как никто другой</strong>
-              <p>
+            </p>
             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
               <a href="#nowhere">Узнать больше</a>
-              <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="второй слайд">
               <p>
                 <strong>Только ночь, только хардкор</strong>
-                <p>
+              </p>
                 <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
                   <a href="#nowhere">Узнать больше</a>
-                  <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="третий слайд">
-                  </section>  
-    </header>
-    <main>
-      <h1>Интернет магазин «Nerds»</h1>
+                </section> 
+                  <h1>Интернет магазин «Nerds»</h1>
   <section class="services">
     <h2>Услуги</h2>
     <!--Дописать код по услугам-->
-<div>
-    <figure>
+    <div>
+      <ul>
+      <li>
       <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация монитора">
-    </figure>
+    </li>
+    </ul>
+    </div>
+    <div>
+      <ul>
+      <li>
+      <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация смартфона">
+    </li>
+    </ul>
+    </div>
+    <div>
+      <ul>
+      <li>
+      <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация доски">
+    </li>
+    </ul>
+    </div>
     <h3>Веб-сайты</h3>
     <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
     <a href="#nowhere">Заказать</a>
-    <figure>
-      <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация смартфона">
-    </figure>
     <h3>Приложения</h3>
     <p>Покорите топ-10 приложений  в AppStore и Google Play</p>
     <a href="#nowhere">Заказать</a>
-    <figure>
-      <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация доски">
-    </figure>
     <h3>Презентации</h3>
     <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
     <a href="#nowhere">Заказать</a>
-    </div>
   </section>
+
   <section class="about">
     <h2>О нас</h2>
     <p>
@@ -89,9 +119,9 @@
         <li>Мобильных приложений для iOS и Android</li>	
         <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
-          <figure>
+          <div>
             <img src="https://via.placeholder.com/360x208" width="360" height="208" alt="иллюстрация логотип">
-          </figure>
+          </div>
           <table>
           <caption>с 2004 года Любим точность во всем:</caption>
           <tr>
@@ -100,16 +130,17 @@
             <td>50<sup>%</sup></td>
           </tr>
           <tr>
-            <td>Уровень самоотдачи</td>
-            <td>Соблюдение  сроков</td>
-            <td>Минимальная предоплата</td>
+            <th>Уровень самоотдачи</th>
+            <th>Соблюдение  сроков</th>
+            <th>Минимальная предоплата</th>
           </tr>
           </table>
   </section>
+
   <section class="companies">
     <h2>Производители</h2>
     <a href="#nowhere">
-      <img src="https://via.placeholder.com/199x68" width="199" height="68"
+     <img src="https://via.placeholder.com/199x68" width="199" height="68"
        alt="htmlacademy">
       </a>
       <a href="#nowhere">
@@ -122,33 +153,25 @@
           </a>
           <a href="#nowhere">
             <img src="https://via.placeholder.com/173x84" width="173" height="84"
-             alt="MISHKA">
+             alt="MISHKA"> <!--здесь убрал тег img-->
             </a>
     </section>
 </main>
+
     <footer class="main-footer">
-      <figure>
+      <div>
         <img src="https://via.placeholder.com/1440x416" width="1440" height="416" alt="карта">
-      </figure>
-      <figure>
+      </div>
+      <!--<div>
         <img src="https://via.placeholder.com/231x190" width="231" height="190" alt="метка на карте">
-      </figure>
+      </div>-->
       <p>NЁRDS DESIGN STUDIO</p>
       <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8   тел. +7 (812) 275-75-75</p>
         <a href="nowhere">Напишите нам</a>
         <div>
-        <a href="#nowhere">
-          <img src="https://via.placeholder.com/81x81" width="81" height="81"
-          alt="ссылка на вк">
-        </a>
-              <a href="#nowhere">
-                <img src="https://via.placeholder.com/81x81" width="81" height="81"
-            alt="ссылка на фейсбук">
-          </a>
-            <a href="#nowhere">
-              <img src="https://via.placeholder.com/81x81" width="81" height="81"
-              alt="ссылка на инстаграмм">
-            </a>
+        <a href="#nowhere" aria-label="вконтакте"></a>
+        <a href="#nowhere" aria-label="фейсбук"></a>
+            <a href="#nowhere" aria-label="инстаграмм"></a>
             </div>
             <p>
               <strong>Давайте дружить, это выгодно!</strong>
