--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Нёрдс</title>
-</head>
-
-<body>
-  <header class="main-header">
-    <nav>
-      <a> <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс"> </a>
-      <ul>
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Нёрдс</title>
+  </head>
+  <body>
+    <header class="main-header">
+      <nav>
+        <a> <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс"> </a>
+        <ul>
         <li> <a href="#nowhere">Студия</a> </li>
         <li> <a href="#nowhere">Клиенты</a> </li>
         <li> <a href="#nowhere">Магазин</a> </li>
@@ -19,116 +17,152 @@
       <ul>
         <li> <a href="#nowhere">Корзина</a> </li>
       </ul>
-    </nav>
-  </header>
-  <main>
-    <div>
+       </nav>
+
+    </header>
+
+    <main>
       <section>
         <ul>
-          <li> <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="первый слайд"> </li>
-          <li> <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="второй слайд"> </li>
-          <li> <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="третий слайд"> </li>
+          <li>
+            <p> <strong>Долго, дорого, скрупулезно.</strong> </p>
+            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+            <a href="#nowhere">Узнать больше</a>
+            <div>
+              <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="первый слайд">
+            </div>
+          </li>
+          <li>
+            <p> <strong>Любим математику как никто другой</strong> </p>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+            <a href="#nowhere">Узнать больше</a>
+            <div>
+              <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="второй слайд">
+            </div>
+          </li>
+          <li>
+            <p> <strong>Только ночь, только хардкор</strong> </p>
+            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <a href="#nowhere">Узнать больше</a>
+            <div>
+              <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="третий слайд">
+            </div>
+          </li>
         </ul>
       </section>
-    </div>
-    <section>
-      <p> <strong>Долго, дорого, скрупулезно.</strong> </p>
-      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p> <a href="#nowhere">Узнать больше</a>
-      <p> <strong>Любим математику
-как никто другой</strong> </p>
-      <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p> <a href="#nowhere">Узнать больше</a>
-      <p> <strong>Только ночь, только хардкор</strong> </p>
-      <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p> <a href="#nowhere">Узнать больше</a> </section>
-    <h1>Интернет магазин «Nerds»</h1>
-    <section class="services">
-      <h2>Услуги</h2>
-      <div>
-        <ul>
-          <li> <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация монитора"> </li>
-          <li>
-            <h3>Веб-сайты</h3> </li>
-          <li>Мир никогда не будет прежним после того как увидит ваш сайт!</li>
-          <li> <a href="#nowhere">Заказать</a> </li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li> <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация смартфона"> </li>
-          <li>
-            <h3>Приложения</h3> </li>
-          <li>Покорите топ-10 приложений в AppStore и Google Play</li>
-          <li> <a href="#nowhere">Заказать</a> </li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li> <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация доски"> </li>
-          <li>
-            <h3>Презентации</h3> </li>
-          <li>Вы даже не подозреваете, насколько вы изумительны!</li>
-          <li> <a href="#nowhere">Заказать</a> </li>
-        </ul>
-      </div>
-    </section>
-    <section class="about">
-      <h2>О нас</h2>
-      <p> <strong>Мы — маленькая, но гордая дизайн-студия из Краснодара.</strong> </p>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-      <p>Выполняем заказы на разработку:</p>
-      <ul>
-        <li>Веб-сайтов любой сложности</li>
-        <li>Мобильных приложений для iOS и Android</li>
-        <li>Слайдшоу и видео для корпоративных презентаций</li>
-      </ul>
-      <div> <img src="https://via.placeholder.com/360x208" width="360" height="208" alt="иллюстрация логотип"> </div>
-      <table>
-        <caption>с 2004 года Любим точность во всем:</caption>
-        <tr>
-          <td>146<sup>%</sup></td>
-          <td>100<sup>%</sup></td>
-          <td>50<sup>%</sup></td>
-        </tr>
-        <tr>
-          <th>Уровень самоотдачи</th>
-          <th>Соблюдение сроков</th>
-          <th>Минимальная предоплата</th>
-        </tr>
-      </table>
-    </section>
-    <section class="companies">
-      <h2>Производители</h2>
-      <ul>
-        <li>
-          <a href="#nowhere"> <img src="https://via.placeholder.com/199x68" width="199" height="68" alt="htmlacademy"> </a>
-        </li>
-        <li>
-          <a href="#nowhere"> <img src="https://via.placeholder.com/209x90" width="209" height="90" alt="borodinski"> </a>
-        </li>
-        <li>
-          <a href="#nowhere"> <img src="https://via.placeholder.com/185x52" width="185" height="52" alt="pink"> </a>
-        </li>
-        <li>
-          <a href="#nowhere"> <img src="https://via.placeholder.com/173x84" width="173" height="84" alt="MISHKA"> </a>
-        </li>
-      </ul>
-    </section>
-  </main>
-  <footer class="main-footer">
-    <div>
-      <div> <img src="https://via.placeholder.com/1440x416" width="1440" height="416" alt="карта"> </div>
-      <div>
-        <p>NЁRDS DESIGN STUDIO</p>
-        <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p> <a href="nowhere">Напишите нам</a> </div>
-    </div>
-    <div>
-      <a href="#nowhere" aria-label="вконтакте"></a>
-      <a href="#nowhere" aria-label="фейсбук"></a>
-      <a href="#nowhere" aria-label="инстаграмм"></a>
-    </div>
-    <p> <strong>Давайте дружить, это выгодно!</strong> </p>
-    <p>Скидка 10% для друзей из социальных сетей.</p>
-  </footer>
-  <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
-</body>
+      <h1 class="visually-hidden">Интернет магазин «Nerds»</h1>
+      <section class="services">
+        <h2 class="visually-hidden">Услуги</h2>
+        <div>
+          <ul>
+            <li>
+              <div>
+                <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация монитора">
+             </div>
+             <h3> class="visually-hidden">Веб-сайты</h3>
+             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+             <a href="#nowhere">Заказать</a>
+            </li>
+            <li>
+              <div>
+                <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация смартфона">
+              </div>
+              <h3 class="visually-hidden">Приложения</h3>
+              <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+              <a href="#nowhere">Заказать</a>
+            </li>
+            <li>
+              <div>
+                <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация доски">
+              </div>
+              <h3 class="visually-hidden">Презентации</h3>
+              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+              <a href="#nowhere">Заказать</a>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-</html>
+      <section class="about">
+        <h2 class="visually-hidden">О нас</h2>
+        <p> <strong>Мы — маленькая, но гордая дизайн-студия из Краснодара.</strong> </p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p>Выполняем заказы на разработку:</p>
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+        <div>
+          <img src="https://via.placeholder.com/360x208" width="360" height="208" alt="иллюстрация логотип">
+        </div>
+
+        <table>
+          <caption>с 2004 года Любим точность во всем:</caption>
+          <tr>
+            <td>146<sup>%</sup></td>
+            <td>100<sup>%</sup></td>
+            <td>50<sup>%</sup></td>
+          </tr>
+          <tr>
+            <th>Уровень самоотдачи</th>
+            <th>Соблюдение сроков</th>
+            <th>Минимальная предоплата</th>
+          </tr>
+        </table>
+      </section>
+
+      <section class="companies">
+        <h2 class="visually-hidden">Производители</h2>
+        <ul>
+          <li>
+            <a href="#nowhere">
+              <img src="https://via.placeholder.com/199x68" width="199" height="68" alt="htmlacademy">
+            </a>
+          </li>
+          <li>
+            <a href="#nowhere">
+              <img src="https://via.placeholder.com/209x90" width="209" height="90" alt="borodinski">
+            </a>
+          </li>
+          <li>
+            <a href="#nowhere">
+              <img src="https://via.placeholder.com/185x52" width="185" height="52" alt="pink">
+            </a>
+          </li>
+          <li>
+            <a href="#nowhere">
+              <img src="https://via.placeholder.com/173x84" width="173" height="84" alt="MISHKA">
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="main-footer">
+      <div>
+
+        <div>
+          <img src="https://via.placeholder.com/1440x416" width="1440" height="416" alt="карта">
+        </div>
+        <div>
+          <p>NЁRDS DESIGN STUDIO</p>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a> </p>
+          <a href="nowhere">Напишите нам</a>
+        </div>
+      </div>
+
+      <div>
+        <a href="#nowhere" aria-label="вконтакте"></a>
+        <a href="#nowhere" aria-label="фейсбук"></a>
+        <a href="#nowhere" aria-label="инстаграмм"></a>
+      </div>
+
+      <p> <strong>Давайте дружить, это выгодно!</strong> </p>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
+    </footer>
+  </body>
+  </html>
+
+  <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
