убрал класс для заголовков

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <div>
                 <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация монитора">
              </div>
-             <h3> class="visually-hidden">Веб-сайты</h3>
+             <h3>Веб-сайты</h3>
              <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
              <a href="#nowhere">Заказать</a>
             </li>
@@ -67,7 +67,7 @@
               <div>
                 <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация смартфона">
               </div>
-              <h3 class="visually-hidden">Приложения</h3>
+              <h3>Приложения</h3>
               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
               <a href="#nowhere">Заказать</a>
             </li>
@@ -75,7 +75,7 @@
               <div>
                 <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация доски">
               </div>
-              <h3 class="visually-hidden">Презентации</h3>
+              <h3>Презентации</h3>
               <p>Вы даже не подозреваете, насколько вы изумительны!</p>
               <a href="#nowhere">Заказать</a>
             </li>
