Убрал лишние пробелы

--- a/index.html
+++ b/index.html
@@ -7,15 +7,27 @@
   <body>
     <header class="main-header">
       <nav>
-        <a> <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс"> </a>
+        <a>
+          <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс">
+        </a>
         <ul>
-        <li> <a href="#nowhere">Студия</a> </li>
-        <li> <a href="#nowhere">Клиенты</a> </li>
-        <li> <a href="#nowhere">Магазин</a> </li>
-        <li> <a href="#nowhere">Контакты</a> </li>
+        <li>
+          <a href="#nowhere">Студия</a>
+        </li>
+        <li>
+          <a href="#nowhere">Клиенты</a>
+        </li>
+        <li>
+          <a href="#nowhere">Магазин</a>
+        </li>
+        <li>
+          <a href="#nowhere">Контакты</a>
+        </li>
       </ul>
       <ul>
-        <li> <a href="#nowhere">Корзина</a> </li>
+        <li>
+          <a href="#nowhere">Корзина</a>
+        </li>
       </ul>
        </nav>
 
@@ -25,7 +37,7 @@
       <section>
         <ul>
           <li>
-            <p> <strong>Долго, дорого, скрупулезно.</strong> </p>
+            <p><strong>Долго, дорого, скрупулезно.</strong></p>
             <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
             <a href="#nowhere">Узнать больше</a>
             <div>
@@ -33,7 +45,7 @@
             </div>
           </li>
           <li>
-            <p> <strong>Любим математику как никто другой</strong> </p>
+            <p><strong>Любим математику как никто другой</strong></p>
             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
             <a href="#nowhere">Узнать больше</a>
             <div>
@@ -41,7 +53,7 @@
             </div>
           </li>
           <li>
-            <p> <strong>Только ночь, только хардкор</strong> </p>
+            <p><strong>Только ночь, только хардкор</strong></p>
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a href="#nowhere">Узнать больше</a>
             <div>
@@ -85,7 +97,7 @@
 
       <section class="about">
         <h2 class="visually-hidden">О нас</h2>
-        <p> <strong>Мы — маленькая, но гордая дизайн-студия из Краснодара.</strong> </p>
+        <p><strong>Мы — маленькая, но гордая дизайн-студия из Краснодара.</strong></p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
         <p>Выполняем заказы на разработку:</p>
         <ul>
@@ -159,7 +171,7 @@
         <a href="#nowhere" aria-label="инстаграмм"></a>
       </div>
 
-      <p> <strong>Давайте дружить, это выгодно!</strong> </p>
+      <p><strong>Давайте дружить, это выгодно!</strong></p>
       <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
   </body>
