--- a/catalog.html
+++ b/catalog.html
@@ -7,47 +7,223 @@
   <body>
     <header class="main-header">
       <nav>
-        <a href="#nowhere"> <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс"> </a>
+        <a href="#nowhere">
+          <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс">
+        </a>
         <ul>
-        <li> <a href="#nowhere">Студия</a> </li>
-        <li> <a href="#nowhere">Клиенты</a> </li>
-        <li> <a href="#nowhere">Магазин</a> </li>
-        <li> <a href="#nowhere">Контакты</a> </li>
+        <li>
+          <a href="#nowhere">Студия</a>
+        </li>
+        <li>
+          <a href="#nowhere">Клиенты</a>
+        </li>
+        <li>
+          <a>Магазин</a>
+        </li>
+        <li>
+          <a href="#nowhere">Контакты</a>
+        </li>
       </ul>
       <ul>
-        <li> <a href="#nowhere">Корзина</a> </li>
+        <li>
+          <a href="#nowhere">Корзина</a>
+        </li>
       </ul>
        </nav>
-
-    </header>
-
-    <main>
-      <h1>Магазин готовых шаблонов</h1>
-      </main>
-    <footer class="main-footer">
-      <div>
-
-        <div>
-          <img src="https://via.placeholder.com/1440x416" width="1440" height="416" alt="карта">
-        </div>
-        <div>
-          <p>NЁRDS DESIGN STUDIO</p>
-          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a> </p>
-          <a href="nowhere">Напишите нам</a>
-        </div>
-      </div>
-
-      <div>
-        <a href="#nowhere" aria-label="вконтакте"></a>
-        <a href="#nowhere" aria-label="фейсбук"></a>
-        <a href="#nowhere" aria-label="инстаграмм"></a>
-      </div>
-
-      <p> <strong>Давайте дружить, это выгодно!</strong> </p>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
-    </footer>
-  </body>
-  </html>
+      </header>
+      <main>
+        <section>
+          <div>
+            <h1>Магазин готовых шаблонов</h1>
+          </div>
+          <h2 class="visually-hidden">Фильтр шаблонов</h2>
+          <form method="get" action="https://echo.htmlacademy.ru">
+            <fieldset>
+              <legend>Фильтр цены</legend>
+              <ul>
+                <li>
+                  <span>от</span>
+                  <input type="number" placeholder="0" min="0" step="100" name="min_price">
+                </li>
+                <li>
+                  <span>до</span>
+                  <input type="number" placeholder="15 000" max="15000" step="100" name="max_price">
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset>
+              <legend>Тип верстки</legend>
+              <ul>
+                <li>
+                  <label class="option">
+                    <input type="radio" class="option_input" value="Алаптивная" checked>
+                    <span class="option_element"></span>
+                    <span class="option_label">Алаптивная</span>
+                  </label>
+                </li>
+                <li>
+                  <label class="option">
+                    <input type="radio" class="option_input" value="Фиксированная">
+                    <span class="option_element"></span>
+                    <span class="option_label">Фиксированная</span>
+                  </label>
+                </li>
+                <li>
+                  <label class="option">
+                    <input type="radio" class="option_input" value="Резиновая">
+                    <span class="option_element"></span>
+                    <span class="option_label">Резиновая</span>
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset>
+              <legend>Особенности:</legend>
+              <ul>
+                <li>
+                  <label class="option">
+                    <input type="checkbox" class="option_input" value="Слайдер" checked>
+                    <span class="option_element"></span>
+                    <span class="option_label">Слайдер</span>
+                  </label>
+                </li>
+                <li>
+                  <label class="option">
+                    <input type="checkbox" class="option_input" value="Блок преимуществ">
+                    <span class="option_element"></span>
+                    <span class="option_label">Блок преимуществ</span>
+                  </label>
+                </li>
+                <li>
+                  <label class="option">
+                    <input type="checkbox" class="option_input" value="Новости" checked>
+                    <span class="option_element"></span>
+                    <span class="option_label">Новости</span>
+                  </label>
+                </li>
+                <li>
+                  <label class="option">
+                    <input type="checkbox" class="option_input" value="Галерея">
+                    <span class="option_element"></span>
+                    <span class="option_label">Галерея</span>
+                  </label>
+                </li>
+                <li>
+                  <label class="option">
+                    <input type="checkbox" class="option_input" value="Корзина">
+                    <span class="option_element"></span>
+                    <span class="option_label">Корзина</span>
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <button type="button">Показать</button>
+          </form>
+          <div>
+            <ul>
+              <li>
+                <p>Сортировать</p>
+              </li>
+              <li>
+                <a href="nowhere">по цене</a>
+              </li>
+              <li>
+                <a href="nowhere">по типу</a>
+              </li>
+              <li>
+                <a href="nowhere">по названию</a>
+              </li>
+              <li>
+                <button type="button" class="icon-down-dir">вниз</button>
+              </li>
+              <li>
+                <button type="button" class="icon-up-dir">вверх</button>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>
+                <a href="nowhere">
+                  <img src="https://via.placeholder.com/358x347" width="358" height="347" alt="седона">
+                </a>
+              </li>
+              <li>
+                <a href="nowhere">SEDONA</a>
+                <p>Информационный сайт  для туристов</p>
+                  <a href="nowhere">9 900<span>&#8381;</span></a>
+              </li>
+              <li>
+                <a href="nowhere">
+                  <img src="https://via.placeholder.com/358x347" width="358" height="347" alt="сайт пинк">
+                </a>
+              </li>
+              <li>
+                <a href="nowhere">Pink App</a>
+                <p>Продуктовый лендинг приложения для iOS и Android</p>
+                  <a href="nowhere">9 900<span>&#8381;</span></a>
+              </li>
+              <li>
+                <a href="nowhere">
+                  <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт бородинский">
+                </a>
+              </li>
+              <li>
+                <a href="nowhere">
+                  <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт мишка">
+                </a>
+              </li>
+              <li>
+                <a href="nowhere">
+                  <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт учеба">
+                </a>
+              </li>
+              <li>
+                <a href="nowhere">
+                  <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт кваст">
+                </a>
+              </li>
+            </ul>
+          </div>
+            <div>
+              <ul class="pagination">
+                <li class="page-item">
+                  <a class="page-link">1</a>
+                </li>
+                <li class="page-item">
+                  <a href="nowhere" class="page-link">2</a>
+                </li>
+                <li class="page-item">
+                  <a href="nowhere" class="page-link">3</a>
+                </li>
+                <li class="page-item">
+                  <a href="nowhere" class="page-link" aria-label="Следующая">Следующая</a>
+                </li>
+              </ul>
+            </div>
+          </section>
+        </main>
+        <footer class="main-footer">
+          <div>
+            <div>
+              <img src="https://via.placeholder.com/1440x416" width="1440" height="416" alt="карта">
+            </div>
+            <div>
+              <p>NЁRDS DESIGN STUDIO</p>
+              <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+              <p>тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a> </p>
+              <a href="nowhere">Напишите нам</a>
+            </div>
+          </div>
+          <div>
+            <a href="#nowhere" aria-label="вконтакте"></a>
+            <a href="#nowhere" aria-label="фейсбук"></a>
+            <a href="#nowhere" aria-label="инстаграмм"></a>
+          </div>
+          <p><strong>Давайте дружить, это выгодно!</strong></p>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </footer>
+      </body>
+      </html>
 
   <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
