--- a/catalog.html
+++ b/catalog.html
@@ -120,93 +120,144 @@
           <button type="submit">Показать</button>
         </form>
         <div>
+          <p>Сортировать</p>
           <ul>
             <li>
-              <p>Сортировать</p>
+              <a href="#nowhere">по цене</a>
             </li>
             <li>
-              <a href="nowhere">по цене</a>
+              <a href="#nowhere">по типу</a>
             </li>
             <li>
-              <a href="nowhere">по типу</a>
-            </li>
-            <li>
-              <a href="nowhere">по названию</a>
+              <a href="#nowhere">по названию</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a class="icon-down-dir" href="nowhere">вниз</a>
+              <a href="#down" aria-label="вниз"></a>
             </li>
             <li>
-              <a class="icon-up-dir" href="nowhere">вверх</a>
+              <a href="#up" aria-label="вверх"></a>
             </li>
           </ul>
         </div>
         <div>
+
           <ul>
             <li>
-              <a href="nowhere">
+              <a href="#nowhere">
                 <img src="https://via.placeholder.com/358x347" width="358" height="347" alt="седона">
               </a>
             </li>
           </ul>
+
           <article>
-            <a href="nowhere">
+            <a href="#nowhere">
               <h2>SEDONA</h2>
             </a>
             <p>Информационный сайт  для туристов</p>
-              <a href="nowhere">9 900<span>&#8381;</span></a>
+              <a href="#nowhere">9 900 &#8381;</a>
           </article>
+
           <ul>
             <li>
-              <a href="nowhere">
-                <img src="https://via.placeholder.com/358x347" width="358" height="347" alt="сайт пинк">
+              <a href="#nowhere">
+                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт пинк">
               </a>
             </li>
+          </ul>
+
+          <article>
+            <a href="#nowhere">
+              <h2>Pink App</h2>
+            </a>
+            <p>Продуктовый лендинг приложения для iOS и Android</p>
+              <a href="#nowhere">9 900 &#8381;</a>
+          </article>
+
+          <ul>
             <li>
-              <a href="nowhere">Pink App</a>
-              <p>Продуктовый лендинг приложения для iOS и Android</p>
-                <a href="nowhere">9 900<span>&#8381;</span></a>
-            </li>
-            <li>
-              <a href="nowhere">
+              <a href="#nowhere">
                 <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт бородинский">
               </a>
             </li>
+          </ul>
+
+          <article>
+            <a href="#nowhere">
+              <h2>Barbershop</h2>
+            </a>
+            <p>Сайт салона красоты. Для мужчин, да.</p>
+              <a href="#nowhere">9 900 &#8381;</a>
+          </article>
+
+          <ul>
             <li>
-              <a href="nowhere">
-                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт мишка">
+              <a href="#nowhere">
+                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт вязаных игрушек">
               </a>
             </li>
+          </ul>
+
+          <article>
+            <a href="#nowhere">
+              <h2>MISHKA</h2>
+            </a>
+            <p>Интернет-магазин  вязаных игрушек</p>
+              <a href="#nowhere">9 900 &#8381;</a>
+          </article>
+
+          <ul>
             <li>
-              <a href="nowhere">
-                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт учеба">
+              <a href="#nowhere">
+                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт A Plus">
               </a>
             </li>
+          </ul>
+
+          <article>
+            <a href="#nowhere">
+              <h2>A Plus</h2>
+            </a>
+            <p>Лендинг курсов повышения квалификации</p>
+            <a href="#nowhere">9 900 &#8381;</a>
+          </article>
+
+          <ul>
             <li>
-              <a href="nowhere">
+              <a href="#nowhere">
                 <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт кваст">
               </a>
             </li>
           </ul>
+
+          <article>
+            <a href="#nowhere">
+              <h2>КВАСТ</h2>
+            </a>
+            <p>Промо-сайт производителя крафтового кваса</p>
+              <a href="#nowhere">9 900 &#8381;</a>
+          </article>
+
         </div>
-        <div>
-          <ul class="pagination">
-            <li class="page-item">
-              <a class="page-link">1</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="nowhere">2</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="nowhere">3</a>
-            </li>
-            <li class="page-item">
-              <a  class="page-link" href="nowhere" aria-label="Следующая">Следующая</a>
-            </li>
-          </ul>
-        </div>
+
+          <div>
+            <ul class="pagination">
+              <li class="page-item">
+                <a class="page-link">1</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#nowhere">2</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#nowhere">3</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#nowhere" aria-label="Следующая">Следующая</a>
+              </li>
+            </ul>
+          </div>
+
       </section>
     </main>
     <footer class="main-footer">
@@ -218,7 +269,7 @@
           <p>NЁRDS DESIGN STUDIO</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p>тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a> </p>
-          <a href="nowhere">Напишите нам</a>
+          <a href="#nowhere">Напишите нам</a>
         </div>
       </div>
       <div>
