--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <p>NЁRDS DESIGN STUDIO</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p>тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a> </p>
-          <a href="nowhere">Напишите нам</a>
+          <a href="#nowhere">Напишите нам</a>
         </div>
       </div>
 
